--- a/.github/workflows/publish-plugin.yml
+++ b/.github/workflows/publish-plugin.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   publish-plugin:
     runs-on: ubuntu-latest
+    env:
+      WINDY_API_KEY: ${{ secrets.WINDY_API_KEY }}
 
     steps:
       - uses: actions/checkout@v3
@@ -13,10 +15,28 @@ jobs:
       - name: Install jq
         run: sudo apt-get install -y jq
 
-      - name: Bump version in manifest.json
+      - name: Bump plugin version
         run: bash ./bump-version.sh
 
-      - name: Publish to Windy
-        uses: windycom/publish-plugin-action@v1
-        with:
-          api-key: ${{ secrets.WINDY_API_KEY }}
+      - name: Build
+        run: |
+          npm install
+          npm run build
+
+      - name: Show version in dist/plugin.json
+        run: cat dist/plugin.json
+
+      - name: Publish Plugin
+        run: |
+          if [ -z "$WINDY_API_KEY" ]; then
+            echo "Secret WINDY_API_KEY is not configured" >&2
+            exit 1
+          fi
+          cd dist
+          echo "Creating plugin archive..."
+          echo "{\"repositoryName\": \"${{ github.repository }}\", \"commitSha\": \"${{ github.sha }}\", \"repositoryOwner\": \"${{ github.repository_owner }}\"}" > /tmp/plugin-info.json
+          mv plugin.json /tmp
+          jq -s '.[0] * .[1]' /tmp/plugin.json /tmp/plugin-info.json > plugin.json
+          tar cf ../plugin.tar .
+          echo "Publishing plugin..."
+          curl -s --fail-with-body -XPOST 'https://node.windy.com/plugins/v1.0/upload' -H "x-windy-api-key: ${WINDY_API_KEY}" -F "plugin_archive=@../plugin.tar"
