--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "TempAloft",
+  "name": "windy-plugin-tempaloft"
   "version": "2.0.3",
   "title": "Temperature Aloft",
   "description": "Displays air temperature at flight levels using Windy overlays.",
