--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "name": "windy-plugin-tempaloft",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "title": "Temperature Aloft",
   "description": "Displays air temperature at flight levels using Windy overlays.",
-  "author": "Your Name",
-  "repository": "https://github.com/your-username/tempaloft-plugin",
-  "plugin": "plugin.js",
+  "author": "Tim Double",
+  "repository": "https://github.com/TimDouble/tempaloft-plugin",
+  "plugin": "plugin.min.js",
   "html": "plugin.html",
   "desktopUI": true,
   "mobileUI": false,
