--- a/.github/workflows/publish-plugin.yml
+++ b/.github/workflows/publish-plugin.yml
@@ -10,30 +10,26 @@ jobs:
       WINDY_API_KEY: ${{ secrets.WINDY_API_KEY }}
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
-      - name: Install jq
-        run: sudo apt-get install -y jq
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
-      - name: Build
+      - name: Install npm dependencies
+        run: npm install
+
+      - name: Build plugin
+        run: npm run build
+
+      - name: Create plugin archive and publish
         run: |
-          npm install
-          npm run build
-
-      - name: Show version in dist/plugin.json
-        run: cat dist/plugin.json
-
-      - name: Publish Plugin
-        run: |
-          if [ -z "$WINDY_API_KEY" ]; then
-            echo "Secret WINDY_API_KEY is not configured" >&2
-            exit 1
-          fi
           cd dist
           echo "Creating plugin archive..."
-          echo "{\"repositoryName\": \"${{ github.repository }}\", \"commitSha\": \"${{ github.sha }}\", \"repositoryOwner\": \"${{ github.repository_owner }}\"}" > /tmp/plugin-info.json
-          mv plugin.json /tmp
-          jq -s '.[0] * .[1]' /tmp/plugin.json /tmp/plugin-info.json > plugin.json
           tar cf ../plugin.tar .
+
           echo "Publishing plugin..."
-          curl -s --fail-with-body -XPOST 'https://node.windy.com/plugins/v1.0/upload' -H "x-windy-api-key: ${WINDY_API_KEY}" -F "plugin_archive=@../plugin.tar"
+          curl -s --fail-with-body -XPOST 'https://node.windy.com/plugins/v1.0/upload' \
+            -H "x-windy-api-key: $WINDY_API_KEY" \
+            -F "plugin_archive=@../plugin.tar"
