--- a/.github/workflows/publish-plugin.yml
+++ b/.github/workflows/publish-plugin.yml
@@ -11,16 +11,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Publish Plugin
+       - name: Publish Plugin
         run: |
           if [ -z "$WINDY_API_KEY" ]; then
             echo "Secret WINDY_API_KEY is not configured" >&2
             exit 1
           fi
           echo "Creating plugin archive..."
-          tar cf plugin.tar plugin.min.js plugin.html manifest.json
+          cp manifest.json plugin.json
+          tar cf plugin.tar plugin.min.js plugin.html plugin.json
           echo "Publishing plugin..."
           curl -s --fail-with-body -XPOST 'https://node.windy.com/plugins/v1.0/upload' \
             -H "x-windy-api-key: $WINDY_API_KEY" \
             -F "plugin_archive=@plugin.tar"
-
